<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_below="@+id/crossDialog"
    android:layout_centerVertical="true"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    android:padding="@dimen/_10sdp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="@dimen/_3sdp">
    <EditText
        android:textSize="@dimen/_12sdp"
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:hint="@string/old__password_text"/>
    <EditText
        android:textSize="@dimen/_12sdp"
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="@dimen/_10sdp"
        android:inputType="textPassword"
        android:hint="@string/new__password_text"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:textSize="@dimen/_12sdp"
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="@dimen/_10sdp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_text"
        android:layout_marginTop="@dimen/_10sdp"/>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/submit_text"
        android:textColor="@color/white"/>
</LinearLayout>
    <ImageView
        android:id="@+id/crossDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cross_icon"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/_10sdp"
        />
</RelativeLayout>