<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/details"
    android:layout_height="match_parent"
    tools:context=".UserPart.HomePart.Fragments.CategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/titleOfActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:padding="@dimen/_10sdp"
                android:text="@string/all_category_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"/>
<!--
            <ImageView
                android:id="@+id/forgotBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_weight="0.6"
                android:src="@drawable/back_icon" />-->
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.6"
    android:background="@color/lightGray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fixProblemText"
        android:text="@string/fixproblem_text_edit"
        android:gravity="center"
        android:padding="@dimen/_10sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/purchaseText"
        android:text="@string/purchase_text_edit"
        android:gravity="center"
        android:padding="@dimen/_10sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/officeText"
        android:text="@string/office_setup_text_edit"
        android:gravity="center"
        android:padding="@dimen/_10sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/maintanceText"
        android:text="@string/maintenance_text_edit"
        android:gravity="center"
        android:padding="@dimen/_10sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/gray"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rentText"
    android:text="@string/rent_text_edit"
    android:gravity="center"
    android:padding="@dimen/_10sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/gray"/>



</LinearLayout>
                   <!-- <android.support.v7.widget.RecyclerView
                        android:id="@+id/mainCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="0.7"
                        android:background="@color/lightGray"
                        android:text="@string/hello_blank_fragment" />-->

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/subCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_weight="0.4"
                        android:background="@color/white"
                        android:text="@string/hello_blank_fragment" />
                </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>